[package]
name = "buffer_ring"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/BloomDb-Labs/buffer_ring"
homepage = "https://github.com/BloomDb-Labs/buffer_ring"
documentation = "https://docs.rs/buffer_ring"

[dependencies]
io-uring = "0.7.11"
bytes = "1.11.1"
libc = "0.2"
parking_lot = "0.12.5"