[package]
name = "buffer_ring"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0"
description = "A latch-free I/O buffer ring implementation for concurrent log-structured storage using io_uring"
repository = "https://github.com/BloomDb-Labs/buffer_ring"
homepage = "https://github.com/BloomDb-Labs/buffer_ring"
documentation = "https://docs.rs/buffer_ring"

[dependencies]
io-uring = "0.7.11"
bytes = "1.11.1"
libc = "0.2"
parking_lot = "0.12.5"

[dev-dependencies]
tempfile = "3.0"